# Hotel-Workflow-Automation

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/html/html_parsers/: clc_parser.py
app/core/mail/: outlook.py
app/models/: outlook_models.py  reservation_models.py
app/resources/configs/: email_settings.py
app/resources/templates/: message_0.html
app/tests/: test_html.py
